IgnoreNulls support for manual metrics. Fix z-index bug with results table and mobile sidebar

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -274,7 +274,7 @@ pre {
     position: sticky;
     left: 0;
     width: auto;
-    z-index: 999;
+    z-index: 890;
     border-right: 2px solid #ccc;
   }
 
